[package]
name = "multigear"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
autoexamples = false
license = "MIT OR Apache-2.0"
description = "Framework-agnostic multipart/form-data parser for Rust"
keywords = ["multipart", "upload", "axum", "actix", "hyper"]
categories = ["web-programming", "asynchronous"]

[features]
default = ["tokio-rt"]
tokio-rt = []
axum = ["dep:axum"]
actix = ["dep:actix-web", "dep:actix-multipart"]
hyper = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
http = "1"
mime = "0.3"
pin-project = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "io-util", "fs", "sync", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "=1.10.0", features = ["v4"] }

axum = { version = "0.7", optional = true }
actix-web = { version = "4", optional = true }
actix-multipart = { version = "0.5", optional = true }
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "upload_bench"
harness = false

[[example]]
name = "axum_memory"
path = "examples/axum_memory/src/main.rs"
required-features = ["axum"]

[[example]]
name = "axum_disk"
path = "examples/axum_disk/src/main.rs"
required-features = ["axum"]

[[example]]
name = "axum_fields"
path = "examples/axum_fields/src/main.rs"
required-features = ["axum"]

[[example]]
name = "actix_memory"
path = "examples/actix_memory/src/main.rs"
required-features = ["actix"]

[[example]]
name = "actix_disk"
path = "examples/actix_disk/src/main.rs"
required-features = ["actix"]

[[example]]
name = "actix_fields"
path = "examples/actix_fields/src/main.rs"
required-features = ["actix"]

[[example]]
name = "hyper_raw"
path = "examples/hyper_raw/src/main.rs"
required-features = ["hyper"]

[[example]]
name = "hyper_service"
path = "examples/hyper_service/src/main.rs"
required-features = ["hyper"]

[[example]]
name = "custom_storage"
path = "examples/custom_storage/src/main.rs"

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_qualifications = "warn"


