[package]
name = "hyper-raw-example"
version = "0.1.0"
edition = "2021"

[dependencies]
multigear = { path = "../..", features = ["hyper"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }


